--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <link rel="stylesheet" href="styles/style.min.css">  </head>
+  <body>
+   <header></header>
+
+   <footer>
+   
+   </footer>
+
+    <script src="./scripts/script.js" type="module"></script>
+  </body>
 </html>
