footer styling with responsive done

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  <link rel="stylesheet" href="styles/style.min.css">  </head>
+    <title>Home page</title>
+    <link rel="stylesheet" href="styles/style.min.css" />
+  </head>
   <body>
-   <header></header>
+    <header></header>
 
-   <footer>
-   
-   </footer>
+    <footer></footer>
 
     <script src="./scripts/script.js" type="module"></script>
   </body>
