--- a/pages/auth/sign-up.html
+++ b/pages/auth/sign-up.html
@@ -9,7 +9,7 @@
   <body>
     <main id="auth">
       <div id="auth-image">
-        <img src="/assets/images/auth.jpg" alt="Placeholder image " />
+        <img src="/assets/images/auth.png" alt="Placeholder image " />
         <h2 class="heading-4">Amazora</h2>
       </div>
       <div id="auth-text-container">
