--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -8,6 +8,22 @@
   </head>
   <body>
     <header></header>
+    <main>
+      <section aria-label="BreadCrumb">
+        <ol id="bread-crumb">
+          <li >
+            <a class="button-xs" href="#">Home</a>
+          </li>
+          <li>
+            <a class="button-xs" href="#">Contact</a>
+          </li>
+        </ol>
+      </section>
+      <section id="title"></section>
+      <section id="about"></section>
+      <section id="contact"></section>
+      <section id="features"></section>
+    </main>
     <footer></footer>
     <script type="module" src="../scripts/script.js"></script>
   </body>
