created the sign up functional

--- a/pages/auth/sign-up.html
+++ b/pages/auth/sign-up.html
@@ -15,7 +15,7 @@
       <div id="auth-text-container">
         <h2 class="heading-4">Sign Up</h2>
         <p class="body-2">Already Have an account <a href="">Sign In</a></p>
-        <form id="auth-form" action="">
+        <form id="sign-up" action="">
           <div>
             <label for="username">
               <input
