dynamic features bar added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header></header>
-
+    <section id="features-container"></section>
     <footer></footer>
 
     <script src="./scripts/script.js" type="module"></script>
