--- a/pages/account/my-account.html
+++ b/pages/account/my-account.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/style.min.css">
 </head>
 <body>
-    
+    <header></header>
+    <footer></footer>
+    <script type="module" src="/scripts/script.js"></script>
 </body>
 </html>
