contact cards have been  made

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -11,7 +11,7 @@
     <main>
       <section aria-label="BreadCrumb">
         <ol id="bread-crumb">
-          <li >
+          <li>
             <a class="button-xs" href="#">Home</a>
           </li>
           <li>
@@ -21,7 +21,24 @@
       </section>
       <section id="title"></section>
       <section id="about"></section>
-      <section id="contact"></section>
+      <section id="contact">
+        <div class="">
+          <img src="/assets/icons/contact-us/store.svg" alt="" />
+          <h3 class="heading-1">Address</h3>
+          <p class="body-2">440 Terry Ave N, Seattle, WA</p>
+        </div>
+        <div class="">
+          <img src="/assets/icons/contact-us/phne.svg" alt="" />
+          <h3 class="heading-1">Call us</h3>
+          <p class="body-2">(888) 280-4331
+</p>
+        </div>
+        <div class="">
+          <img src="/assets/icons/contact-us/mail.svg" alt="" />
+          <h3 class="heading-1">Mail</h3>
+          <p class="body-2">hi@amazora.com</p>
+        </div>
+      </section>
       <section id="features"></section>
     </main>
     <footer></footer>
