sub manu for profile page is done

--- a/pages/account/wishlist.html
+++ b/pages/account/wishlist.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My wishlist</title>
+    <link rel="stylesheet" href="/styles/style.min.css">
 </head>
 <body>
-    
+    <header></header>
+    <main class="container account"> 
+        <h3 class="heading-3">Wishlist</h3>
+      <div id="account-container">
+        <div id="account-nav"></div>
+        <div id="account-content"></div>
+      </div>
+     </main>
+    <footer></footer>
+    <script type="module" src="/scripts/script.js"></script>
+    <script type="module" src="/scripts/components/account-nav.js"></script>
 </body>
 </html>
