--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact Us | Amazora - the online fake store</title>
     <link rel="stylesheet" href="../styles/style.min.css" />
   </head>
   <body>
@@ -19,9 +19,19 @@
           </li>
         </ol>
       </section>
-      <section id="title"></section>
+      <section id="contact-title">
+        <h2>
+          We believe in sustainable decor. We’re passionate about life at home.
+        </h2>
+        <p class="body-2">
+          Our features timeless furniture, with natural fabrics, curved lines, plenty of mirrors and classic design, which can be incorporated into any decor project. The pieces enchant for their sobriety, to last for generations, faithful to the shapes of each period, with a touch of the present
+        </p>
+      </section>
       <section id="about"></section>
+
       <section id="contact">
+      
+        <h2>Contact Us</h2>
         <div class="">
           <img src="/assets/icons/contact-us/store.svg" alt="" />
           <h3 class="heading-1">Address</h3>
@@ -39,7 +49,7 @@
           <p class="body-2">hi@amazora.com</p>
         </div>
       </section>
-      <section id="features"></section>
+      <section id="features-container"></section>
     </main>
     <footer></footer>
     <script type="module" src="../scripts/script.js"></script>
