--- a/pages/account/my-account.html
+++ b/pages/account/my-account.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Account</title>
     <link rel="stylesheet" href="/styles/style.min.css">
 </head>
 <body>
     <header></header>
+ <main class="container account">
+    <h3 class="heading-3"> My Account</h3>
+    
+    <div id="account-container">
+        <div id="account-nav"></div>
+        <div id="account-content"></div>
+      </div>
+ </main>
     <footer></footer>
     <script type="module" src="/scripts/script.js"></script>
+    <script type="module" src="/scripts/components/account-nav.js"></script>
 </body>
 </html>
