--- a/pages/account/orders.html
+++ b/pages/account/orders.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <header></header>
+    <main class="container account">
+      <h3 class="heading-3">Orders</h3>
+      <div id="account-container">
+        <div id="account-nav"></div>
+        <div id="account-content"></div>
+      </div>
+   </main>
     <footer></footer>
     <script type="module" src="/scripts/script.js"></script>
+    <script type="module" src="/scripts/components/account-nav.js"></script>
   </body>
 </html>
