account details has been connected with the database

--- a/pages/account/my-account.html
+++ b/pages/account/my-account.html
@@ -13,7 +13,7 @@
 
       <div id="account-container">
         <div id="account-nav"></div>
-        <form id="account-content">
+        <form id="account-form">
           <div class="form-section">
             <h4 class="heading-7">Account Detail</h4>
             <label for="first-name">
@@ -83,7 +83,6 @@
               />
               <span class="form-info">Your given password did not matched. </span>
             </label>
-        
             <button class="form-btn" type="submit">Save Changes</button>
           </div>
        
@@ -92,6 +91,6 @@
     </main>
     <footer></footer>
     <script type="module" src="/scripts/script.js"></script>
-    <script type="module" src="/scripts/components/account-nav.js"></script>
+    <script type="module" src="/scripts/account.js"></script>
   </body>
 </html>
