--- a/pages/auth/sign-in.html
+++ b/pages/auth/sign-in.html
@@ -14,7 +14,7 @@
       </div>
       <div id="auth-text-container">
         <h2 class="heading-4">Sign in</h2>
-        <p class="body-2">Don't have an account yet? <a href="">Sign Up</a></p>
+        <p class="body-2">Don't have an account yet? <a href="/pages/auth/sign-up.html">Sign Up</a></p>
         <form id="sign-in" action="">
           <div>
             <label for="email-username" id="input-email-username">
