--- a/pages/account/address.html
+++ b/pages/account/address.html
@@ -12,11 +12,11 @@
       <h3 class="heading-3">My Address</h3>
       <div id="account-container">
         <div id="account-nav"></div>
-        <div id="account-content"></div>
+        <div id="account-address"></div>
       </div>
    </main>
     <footer></footer>
     <script type="module" src="/scripts/script.js"></script>
-    <script type="module" src="/scripts/components/account-nav.js"></script>
+    <script type="module" src="/scripts/account.js"></script>
   </body>
 </html>
