--- a/pages/account/wishlist.html
+++ b/pages/account/wishlist.html
@@ -17,6 +17,6 @@
      </main>
     <footer></footer>
     <script type="module" src="/scripts/script.js"></script>
-    <script type="module" src="/scripts/components/account-nav.js"></script>
+    <script type="module" src="/scripts/account.js"></script>
 </body>
 </html>
