product page data fetching and data markup is done

--- a/pages/product/product.html
+++ b/pages/product/product.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product page</title>
+    <link rel="stylesheet" href="/styles/style.min.css" />
+  </head>
+  <body>
+    <header></header>
+    <main id="product">
+      <div id="product-info" class="container"></div>
+      <div id="product-details"></div>
+    </main>
+    <footer></footer>
+
+    <script type="module" src="/scripts/script.js"></script>
+    <script type="module" src="/scripts/pages/product.js"></script>
+  </body>
 </html>
