--- a/pages/product/product.html
+++ b/pages/product/product.html
@@ -15,6 +15,6 @@
     <footer></footer>
 
     <script type="module" src="/scripts/script.js"></script>
-    <script type="module" src="/scripts/pages/product.js"></script>
+    <script type="module" src="/scripts/pages/product/product.js"></script>
   </body>
 </html>
