shop page banner is done

--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop Page</title>
-    <link rel="stylesheet" href="../styles/style.min.css" />
+    <link rel="stylesheet" href="/styles/style.min.css" />
   </head>
   <body>
     <header></header>
+    <div class="container"><div id="shop-banner">
+      <h2 class="heading-3">Shop page</h2>
+ <p class="body-2">Let’s design the place you always imagined.
+ </p>
+    </div></div>
+    <div class="container" id="products-display-container">
+      <div id="filters"></div>
+      <div id="products">welcome to the products</div>
+    </div>
     <footer></footer>
-    <script src="../scripts/script.js" type="module"></script>
+    <script src="/scripts/script.js" type="module"></script>
+    <script type="module" src="/scripts/pages/shop/shop.js"></script>
   </body>
 </html>
